@@ -1,14 +1,14 @@
 package ru.iukr.linkshortener.service.impl;
 
+import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
+import org.testcontainers.containers.PostgreSQLContainer;
 import ru.iukr.linkshortener.dto.CreateLinkInfoRequest;
-import ru.iukr.linkshortener.mapper.LinkInfoMapper;
+import ru.iukr.linkshortener.dto.FilterLinkInfoRequest;
 import ru.iukr.linkshortener.model.LinkInfo;
-import ru.iukr.linkshortener.model.LinkInfoResponse;
 import ru.iukr.linkshortener.dto.LinkInfoUpdateRequest;
-import ru.iukr.linkshortener.property.LinkInfoProperty;
 import ru.iukr.linkshortener.repository.LinkInfoRepository;
 import ru.iukr.linkshortener.service.LinkInfoService;
 
@@ -26,32 +26,41 @@ class LinkInfoServiceImplTest {
     private LinkInfoService linkInfoService;
     @Autowired
     private LinkInfoRepository repository;
-    @Autowired
-    private LinkInfoProperty property;
-    @Autowired
-    private LinkInfoMapper mapper;
 
     private final String link = "https://habr.com/";
-    private final String endDate = LocalDateTime.now().plusDays(1).toString();
+    private final LocalDateTime endDate = LocalDateTime.now().plusDays(1);
     private final CreateLinkInfoRequest request = CreateLinkInfoRequest.builder()
             .endTime(endDate)
             .link(link)
             .active(true)
             .build();
 
+    @BeforeAll
+    public static void setUp() {
+        PostgreSQLContainer<?> postgresContainer = new PostgreSQLContainer<>("postgres:latest")
+                .withDatabaseName("test_db")
+                .withUsername("test_user")
+                .withPassword("test_pass");
+        postgresContainer.start();
+
+        // Настройка URL подключения для Spring
+        System.setProperty("spring.datasource.url", postgresContainer.getJdbcUrl());
+        System.setProperty("spring.datasource.username", postgresContainer.getUsername());
+        System.setProperty("spring.datasource.password", postgresContainer.getPassword());
+    }
+
+
     @Test
     void createLinkInfoTest() {
-        int sizeBeforeCreation = linkInfoService.findAll().size();
+        int sizeBeforeCreation = repository.findAll().size();
         linkInfoService.createLinkInfo(request);
-        int sizeAfterCreation = linkInfoService.findAll().size();
+        int sizeAfterCreation = repository.findAll().size();
         assertTrue(sizeAfterCreation > sizeBeforeCreation);
     }
 
     @Test
     void getByShortLinkTest() {
-        if (linkInfoService.findAll().isEmpty()) {
-            linkInfoService.createLinkInfo(request);
-        }
+        createIfNotExists();
         LinkInfo createdLinkInfo = repository
                 .findAll()
                 .stream()
@@ -61,43 +70,44 @@ class LinkInfoServiceImplTest {
     }
 
     @Test
-    void findAllTest() {
-        if (linkInfoService.findAll().isEmpty()) {
-            linkInfoService.createLinkInfo(request);
-        }
-        assertFalse(linkInfoService.findAll().isEmpty());
-    }
-
-    @Test
     void deleteByLinkIdTest() {
-        if (linkInfoService.findAll().isEmpty()) {
-            linkInfoService.createLinkInfo(request);
-        }
-        int sizeOfLinkStorage = linkInfoService.findAll().size();
-        UUID id = linkInfoService.findAll().get(0).getId();
+        createIfNotExists();
+        int sizeOfLinkStorage = repository.findAll().size();
+        UUID id = repository.findAll().getFirst().getId();
         linkInfoService.deleteByLinkId(id);
-        int sizeOfLinkStorageAfterDeletion = linkInfoService.findAll().size();
+        int sizeOfLinkStorageAfterDeletion = repository.findAll().size();
         assertTrue(sizeOfLinkStorage > sizeOfLinkStorageAfterDeletion);
     }
 
     @Test
     void updateLinkInfoTest() {
         String description = "New Description";
-        if (linkInfoService.findAll().isEmpty()) {
-            linkInfoService.createLinkInfo(request);
-        }
-        UUID id = linkInfoService.findAll().get(0).getId();
+        createIfNotExists();
+        UUID id = repository.findAll().getFirst().getId();
         LinkInfoUpdateRequest linkInfoUpdate = LinkInfoUpdateRequest.builder()
                 .id(String.valueOf(id))
                 .description(description)
                 .build();
         linkInfoService.updateLinkInfo(linkInfoUpdate);
-        String foundDescription = linkInfoService
+        String foundDescription = repository
                 .findAll()
                 .stream()
-                .filter(linkInfoResponse -> linkInfoResponse.getId() == id)
+                .filter(linkInfoResponse -> linkInfoResponse.getId().equals(id))
                 .findFirst()
-                .map(LinkInfoResponse::getDescription).get();
+                .map(LinkInfo::getDescription).get();
         assertEquals(description, foundDescription);
+    }
+
+    @Test
+    void findByFilterTest() {
+        createIfNotExists();
+        assertFalse(linkInfoService.findByFilter(FilterLinkInfoRequest.builder()
+                .linkPart(link).build()).isEmpty());
+    }
+
+    private void createIfNotExists() {
+        if (repository.findAll().isEmpty()) {
+            linkInfoService.createLinkInfo(request);
+        }
     }
 }
